position header to stop iamge overflow with little text, make key-points a:hover overflow override css more obvious, clean up proposition section code placement

--- a/tbx/static_src/sass/components/_hero.scss
+++ b/tbx/static_src/sass/components/_hero.scss
@@ -118,9 +118,7 @@
             }
         }
         #{$root}__image-mask {
-            top: 280px;
-            // right: -400px;
-            // width: 75vw;
+            top: 140px;
         }
     }
 
