--- a/tbx/static_src/sass/components/_streamfield.scss
+++ b/tbx/static_src/sass/components/_streamfield.scss
@@ -212,15 +212,4 @@
             }
         }
     }
-
-    .proposition-section & {
-        margin: 0;
-        &:first-of-type{
-            margin-top: ($gutter * 3);
-
-            @include media-query(large) {
-                margin-top: ($gutter * 6);
-            }
-        }
-    }
 }
